[gd_scene load_steps=29 format=3 uid="uid://cax4dle7dm8nv"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_hgcn6"]
[ext_resource type="Script" path="res://Scripts/camera.gd" id="2_mo6m1"]
[ext_resource type="PackedScene" uid="uid://dna472xax2iv1" path="res://Scenes/character.tscn" id="2_u8uc3"]
[ext_resource type="PackedScene" uid="uid://cxscb2yj506db" path="res://Models/block.glb" id="4_afoct"]
[ext_resource type="Resource" uid="uid://cnjbm1xm6bjy6" path="res://test_inv.tres" id="4_arfxy"]
[ext_resource type="PackedScene" uid="uid://b318a25n5rq16" path="res://Scenes/tree.tscn" id="5_1w5y1"]
[ext_resource type="PackedScene" uid="uid://cs7cijtgi5ic8" path="res://Scenes/box.tscn" id="5_ghh83"]
[ext_resource type="PackedScene" uid="uid://dr2rq631hc0r2" path="res://Scenes/rock.tscn" id="5_l207y"]
[ext_resource type="Script" path="res://Scripts/inventory_data.gd" id="6_haq3m"]
[ext_resource type="Script" path="res://Scripts/inventory_interface.gd" id="7_1t0bc"]
[ext_resource type="Script" path="res://Scripts/item_data.gd" id="7_66fyj"]
[ext_resource type="PackedScene" uid="uid://chnldhgm4s0pr" path="res://Scenes/inventory.tscn" id="7_l0s1d"]
[ext_resource type="Script" path="res://Scripts/slot_data.gd" id="8_mf4wc"]
[ext_resource type="PackedScene" uid="uid://cqpr1sr4dxwvn" path="res://Scenes/slot.tscn" id="10_vmoyw"]
[ext_resource type="PackedScene" uid="uid://d1rxrcb87h031" path="res://Scenes/furnace.tscn" id="11_7li5k"]
[ext_resource type="PackedScene" uid="uid://bgargshwa5h8r" path="res://Scenes/esc.tscn" id="16_86gfn"]
[ext_resource type="FontFile" uid="uid://n8rj5bhvxmak" path="res://Fonts/VarelaRound-Regular.ttf" id="17_i1jnt"]
[ext_resource type="PackedScene" uid="uid://ci5wr2q6flkb7" path="res://Scenes/hot_bar_inventory.tscn" id="17_sxrpd"]
[ext_resource type="PackedScene" uid="uid://dt7hsack8bh6v" path="res://Scenes/Hologram.tscn" id="18_nypcp"]
[ext_resource type="PackedScene" uid="uid://crptevl0eefdw" path="res://Scenes/furance_ui.tscn" id="19_gd38o"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_nu1i2"]
sky_top_color = Color(0, 0.823529, 0.988235, 1)
sky_horizon_color = Color(0.580392, 0.654902, 0.670588, 1)
sky_curve = 0.117688

[sub_resource type="Sky" id="Sky_6fr78"]
sky_material = SubResource("ProceduralSkyMaterial_nu1i2")

[sub_resource type="Environment" id="Environment_5voei"]
background_mode = 2
sky = SubResource("Sky_6fr78")
ambient_light_source = 3
reflected_light_source = 2
glow_enabled = true

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_m3igr"]
load_path = "res://.godot/imported/items.png-1f0067fc9f0235e26b07512e44f0d1a2.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_orsp7"]
atlas = SubResource("CompressedTexture2D_m3igr")
region = Rect2(0, 0, 114, 143)

[sub_resource type="Resource" id="Resource_kwtru"]
script = ExtResource("7_66fyj")
name = "Axe"
description = "A handy tool for chopping down trees."
stackable = false
craft_resources = {}
texture = SubResource("AtlasTexture_orsp7")

[sub_resource type="Resource" id="Resource_78twm"]
script = ExtResource("8_mf4wc")
item_data = SubResource("Resource_kwtru")
quantity = 1

[sub_resource type="Resource" id="Resource_kd1ps"]
script = ExtResource("6_haq3m")
slot_datas = Array[ExtResource("8_mf4wc")]([SubResource("Resource_78twm"), null, null, null, null])

[node name="main" type="Node3D"]
script = ExtResource("1_hgcn6")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.66262, 0.505987, -0.552188, 0, 0.737277, 0.67559, 0.748956, 0.44766, -0.488535, -7.504, 10.91, -11.517)
cull_mask = 983039
current = true
script = ExtResource("2_mo6m1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5voei")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.7085, 0, 0.705711, 0, 1, 0, -0.705711, 0, -0.7085, 3.73885, 1.76072, -4.53625)

[node name="Character" parent="." instance=ExtResource("2_u8uc3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
inventory_data = ExtResource("4_arfxy")

[node name="islands" type="Node3D" parent="."]

[node name="main" type="Node3D" parent="islands"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.87, 0)

[node name="Infectables" type="Node3D" parent="islands/main"]

[node name="box" parent="islands/main/Infectables" instance=ExtResource("5_ghh83")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4, -0.11998, -1)
inventory_data = SubResource("Resource_kd1ps")

[node name="tree" parent="islands/main/Infectables" instance=ExtResource("5_1w5y1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="tree2" parent="islands/main/Infectables" instance=ExtResource("5_1w5y1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -4)

[node name="rock" parent="islands/main/Infectables" instance=ExtResource("5_l207y")]
transform = Transform3D(0.56, 0, 0, 0, 0.56, 0, 0, 0, 0.56, 0, 1.52, -7)

[node name="furnace" parent="islands/main/Infectables" instance=ExtResource("11_7li5k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -6)

[node name="blocks" type="Node3D" parent="islands/main"]

[node name="block" parent="islands/main/blocks" instance=ExtResource("4_afoct")]

[node name="block2" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="block3" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="block16" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -4)

[node name="block4" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6)

[node name="block5" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8)

[node name="block18" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="block17" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -8)

[node name="block6" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -8)

[node name="block7" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -6)

[node name="block8" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -4)

[node name="block9" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2)

[node name="block10" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="block11" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="block19" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 2)

[node name="block12" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -2)

[node name="block20" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -2)

[node name="block13" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4)

[node name="block14" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -6)

[node name="block15" parent="islands/main/blocks" instance=ExtResource("4_afoct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -8)

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_1t0bc")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("7_l0s1d")]
layout_mode = 1
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_bottom = 20.0
grow_vertical = 2

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("7_l0s1d")]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -40.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 1

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("10_vmoyw")]
visible = false
modulate = Color(1, 1, 1, 0.631373)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="HotBarInventory" parent="UI" instance=ExtResource("17_sxrpd")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -64.0
offset_right = 134.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[node name="Esc" parent="UI" instance=ExtResource("16_86gfn")]
visible = false
offset_left = 432.0
offset_top = 136.0
offset_right = 1537.0
offset_bottom = 1340.0
scale = Vector2(0.26, 0.26)

[node name="Money" type="Label" parent="UI"]
offset_right = 82.0
offset_bottom = 80.0
scale = Vector2(0.72, 0.72)
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 18
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("17_i1jnt")
theme_override_font_sizes/font_size = 66
text = "0$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FurnaceUI" parent="UI" node_paths=PackedStringArray("character") instance=ExtResource("19_gd38o")]
visible = false
modulate = Color(1, 1, 1, 0.721569)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -252.0
offset_right = -70.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
character = NodePath("../../Character")

[node name="Misc" type="Node3D" parent="."]

[node name="Timer" type="Timer" parent="Misc"]
wait_time = 2.0
autostart = true

[node name="holograms" type="Node3D" parent="."]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)

[node name="island1" parent="holograms" instance=ExtResource("18_nypcp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -3)
price = 50

[node name="island2" parent="holograms" instance=ExtResource("18_nypcp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -3)
price = 100

[node name="island3" parent="holograms" instance=ExtResource("18_nypcp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 11)
price = 75

[node name="island4" parent="holograms" instance=ExtResource("18_nypcp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -17)
price = 200

[connection signal="drop_slot_data" from="UI/InventoryInterface" to="." method="drop_item"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_visibility_changed"]
[connection signal="timeout" from="Misc/Timer" to="." method="_on_spreading_timeout"]
